# go1_cpp_cmake

./: .gitignore  CMakeLists.txt  README.md  setup.py
data/: .~lock.go1_mujoco_data.csv#  go1_mujoco_data.csv
include/go1_cpp_cmake/: go1DataInterface.h  go1FK.h  go1FSM.h  go1GRFMPC.h  go1KalmanFilter.h  go1Params.h  go1StanceMPC.h  go1State.h  go1StateEstimator.h  go1TestFunctions.h  go1Utils.h  numericalJacobian.tpp
models/: go1.xml  go1_MATLAB.xml  go1_platform.xml  go1_wx250s.xml  platform.xml
py_src/: plotGo1CalcTime.py  plotGo1EstResidualData.py  plotGo1HardwareData.py  plotGo1MujocoData.py
src/: go1FK.cpp  go1FSM.cpp  go1GRFMPC.cpp  go1KalmanFilter.cpp  go1StanceMPC.cpp  go1State.cpp  go1StateEstimator.cpp  go1TestFunctions.cpp  go1Utils.cpp  runExperimentMujoco.cpp  runGo1FSMHardware.cpp  runGo1FSMHardwareLoopFunc.cpp  runGo1FSMMujoco.cpp  runGo1FSMMujocoLoopFunc.cpp  runGo1HardwareControl.cpp  runGo1HardwareThreadControl.cpp  runGo1InertiaCalc.cpp  runGo1Mujoco.cpp  runGo1StartupMujoco.cpp  runGo1Tests.cpp  runThreadedGo1Mujoco.cpp  testGo1JointPD.cpp  testGo1JointPDHardware.cpp  testGo1JointPDHardwareLoopFunc.cpp  testGo1ReadHardware.cpp  testGo1ReadHardwareLoopFunc.cpp  testGo1TorqueHardware.cpp
unitree_legged_sdk/: CMakeLists.txt
unitree_legged_sdk/example/: example_position_relay.cpp  example_stand.cpp  example_torque_relay.cpp
